--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=update
 #Data-rest
 #spring.data.web.pageable.default-page-size=5
 #spring.data.web.pageable.max-page-size=5
+
+# ??t th?i gian timeout là 30 phút
+#server.servlet.session.timeout=30m
