--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,24 +2,21 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_project_spring
 spring.datasource.username=root
 spring.datasource.password=1Lyasttkq.
-
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Set logging root is warn
 logging.level.root=warn
-
 # Show JPA Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=trace
-
 #banner
 spring.main.banner-mode=off
-
 # Auto Update
 spring.jpa.hibernate.ddl-auto=update
-
-
 #Data-rest
 #spring.data.web.pageable.default-page-size=5
 #spring.data.web.pageable.max-page-size=5
-
 # ??t th?i gian timeout là 30 phút
 #server.servlet.session.timeout=30m
+
+# configure resource static
+spring.resources.static-locations=classpath:/static/
