--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,18 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_project_spring
 spring.datasource.username=root
 spring.datasource.password=1Lyasttkq.
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Set logging root is warn
 logging.level.root=warn
 # Show JPA Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#thymeleaf
+#spring.thymeleaf.prefix=classpath:/Templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML
+
 #banner
 spring.main.banner-mode=off
 # Auto Update
