--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,21 +3,21 @@ spring.datasource.url=jdbc:mysql://localhost:3306/my_project_spring
 spring.datasource.username=root
 spring.datasource.password=1Lyasttkq.
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # Set logging root is warn
 logging.level.root=warn
+
 # Show JPA Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=trace
-
-#thymeleaf
-#spring.thymeleaf.prefix=classpath:/Templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML
+spring.jpa.show-sql=true
 
 #banner
 spring.main.banner-mode=off
+
 # Auto Update
 spring.jpa.hibernate.ddl-auto=update
+
 #Data-rest
 #spring.data.web.pageable.default-page-size=5
 #spring.data.web.pageable.max-page-size=5
@@ -26,3 +26,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 # configure resource static
 spring.resources.static-locations=classpath:/static/
+
+
+#N?u b?n c?n x? lý các c?u trúc d? li?u v?i ?? sâu l?n h?n m?c m?c ??nh, b?n có th? c?u hình Jackson ?? t?ng gi?i h?n ?? sâu l?ng ghép. ?? làm ?i?u này, b?n có th? ?i?u ch?nh c?u hình c?a Jackson trong Spring Boot:
+#spring.jackson.serialization.write-dates-as-timestamps=false
+#spring.jackson.serialization.indent-output=true
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jackson.deserialization.fail-on-unknown-properties=false
+#spring.jackson.serialization.stream-write-constraints.max-nesting-depth=2000
