--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,13 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 # ??t th?i gian timeout là 30 phút
 #server.servlet.session.timeout=30m
 
+
 # configure resource static
 spring.resources.static-locations=classpath:/static/
-
-
-#N?u b?n c?n x? lý các c?u trúc d? li?u v?i ?? sâu l?n h?n m?c m?c ??nh, b?n có th? c?u hình Jackson ?? t?ng gi?i h?n ?? sâu l?ng ghép. ?? làm ?i?u này, b?n có th? ?i?u ch?nh c?u hình c?a Jackson trong Spring Boot:
-#spring.jackson.serialization.write-dates-as-timestamps=false
-#spring.jackson.serialization.indent-output=true
-#spring.jackson.serialization.fail-on-empty-beans=false
-#spring.jackson.deserialization.fail-on-unknown-properties=false
-#spring.jackson.serialization.stream-write-constraints.max-nesting-depth=2000
+#test
