--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ logging.level.root=warn
 # Show JPA Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=trace
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #banner
 spring.main.banner-mode=off
@@ -19,12 +20,15 @@ spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=update
 
 #Data-rest
-spring.data.web.pageable.default-page-size=5
-spring.data.web.pageable.max-page-size=5
+#spring.data.web.pageable.default-page-size=5
+#spring.data.web.pageable.max-page-size=5
 # ??t th?i gian timeout là 30 phút
 #server.servlet.session.timeout=30m
 
 
 # configure resource static
 spring.resources.static-locations=classpath:/static/
-#test
+
+#configured to find templates in the classpath:/templates/ directory.
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
