update form addUser, securityFilter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,13 @@ spring.datasource.password=1Lyasttkq.
 # Set logging root is warn
 logging.level.root=warn
 
+#Debug
+logging.level.org.springframework.jdbc.core=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.orm.jdbc.bind=trace
+
 # Show JPA Hibernate logging
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.jdbc.bind=trace
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 #banner
