updating detailTranscript: is having an error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.jdbc.core=TRACE
 #logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # Show JPA Hibernate logging
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 #banner
