--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=1Lyasttkq.
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Set logging root is warn
-logging.level.root=warn
+#logging.level.root=warn
 
 #Debug
 logging.level.org.springframework.jdbc.core=TRACE
